<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:baselineAligned="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/zhongzhuan_main_title"
            android:id="@+id/zhongzhuan_main_textView"
            android:layout_gravity="top"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="@drawable/textview_o"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mainlist_count"
            android:id="@+id/zhongzhuan_main_count"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="@drawable/textview_o" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ListView
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:id="@+id/zhongzhuan_main_list"
            android:fastScrollEnabled="true"
            android:layout_gravity="center"
            >

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">


        <Button
            android:layout_width="120dp"
            android:id="@+id/zhongzhuan_main_back"
            android:onClick="zhongzhuan_main_back"
            android:layout_height="wrap_content"
            android:text="@string/mainlist_back"/>

    </LinearLayout>
</LinearLayout>
